--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -42,6 +42,11 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <% if  @team.owner_id == current_user.id  && assign.user.id != @team.owner_id %>
+                        <td><%= link_to '権限移動', team_path(@team.id, params: { user_id: assign.user.id, user_email: assign.user.email}), method: :put ,class: 'btn btn-sm btn-info' %></td>
+                      <% else %>
+                      <td></td>
+                      <% end %>
                     </tr>
                   <% end %>
                 </tbody>
